# libssh2_demo

./: .gitignore  CMakeLists.txt  README.md
lib/libssh2/lib/: libssh2.lib
lib/openssl/include/openssl/: opensslconf.h
lib/openssl/lib/: libssl.lib
src/: main.cpp  ssh2.cpp  ssh2.hpp
